--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ ul#nipList li:hover {background:#eee;}
 
 <h2>Dane sprzedawcy</h2>
 <table>
-<tr><td>Nazwa:</td><td>BeeElectronic</td></tr>
-<tr><td>Adres:</td><td>Warszawa, ul. Elektronowa 15</td></tr>
+<tr><td>Nazwa:</td><td>BeeElectronics</td></tr>
+<tr><td>Adres:</td><td>Łódź, ul. Malinowa 15 93-545</td></tr>
 <tr><td>NIP:</td><td>50231458</td></tr>
 </table>
 
@@ -212,8 +212,8 @@ function addPageContent(doc, invoiceNumber, fileType){
   // Dane sprzedawcy
   const sellerY = y+20;
   doc.rect(40, sellerY, 500, 40);
-  doc.text("Sprzedawca: BeeElectronic", 45, sellerY+15);
-  doc.text("Adres: Warszawa, ul. Elektronowa 15", 200, sellerY+15);
+  doc.text("Sprzedawca: BeeElectronics", 45, sellerY+15);
+  doc.text("Adres: Łódź, ul. Malinowa 15 93-545", 200, sellerY+15);
   doc.text("NIP: 50231458", 450, sellerY+15);
 
   // Dane klienta
